--- a/docs/modules/onecx-service-redirect/pages/onecx-service-redirect.adoc
+++ b/docs/modules/onecx-service-redirect/pages/onecx-service-redirect.adoc
@@ -49,22 +49,43 @@ endif::add-copy-button-to-env-var[]
 |string
 |required icon:exclamation-circle[title=Configuration property is required]
 
-a| [[onecx-service-redirect_onecx-redirect-custom-template-path]] [.property-path]##link:#onecx-service-redirect_onecx-redirect-custom-template-path[`onecx.redirect.custom-template-path`]##
+a| [[onecx-service-redirect_onecx-redirect-custom-redirect-template-path]] [.property-path]##link:#onecx-service-redirect_onecx-redirect-custom-redirect-template-path[`onecx.redirect.custom-redirect-template-path`]##
 ifdef::add-copy-button-to-config-props[]
-config_property_copy_button:+++onecx.redirect.custom-template-path+++[]
+config_property_copy_button:+++onecx.redirect.custom-redirect-template-path+++[]
 endif::add-copy-button-to-config-props[]
 
 
 [.description]
 --
-File path to custom template
+File path to custom redirect template
 
 
 ifdef::add-copy-button-to-env-var[]
-Environment variable: env_var_with_copy_button:+++ONECX_REDIRECT_CUSTOM_TEMPLATE_PATH+++[]
+Environment variable: env_var_with_copy_button:+++ONECX_REDIRECT_CUSTOM_REDIRECT_TEMPLATE_PATH+++[]
 endif::add-copy-button-to-env-var[]
 ifndef::add-copy-button-to-env-var[]
-Environment variable: `+++ONECX_REDIRECT_CUSTOM_TEMPLATE_PATH+++`
+Environment variable: `+++ONECX_REDIRECT_CUSTOM_REDIRECT_TEMPLATE_PATH+++`
+endif::add-copy-button-to-env-var[]
+--
+|string
+|
+
+a| [[onecx-service-redirect_onecx-redirect-custom-fallback-template-path]] [.property-path]##link:#onecx-service-redirect_onecx-redirect-custom-fallback-template-path[`onecx.redirect.custom-fallback-template-path`]##
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++onecx.redirect.custom-fallback-template-path+++[]
+endif::add-copy-button-to-config-props[]
+
+
+[.description]
+--
+File path to custom fallback template
+
+
+ifdef::add-copy-button-to-env-var[]
+Environment variable: env_var_with_copy_button:+++ONECX_REDIRECT_CUSTOM_FALLBACK_TEMPLATE_PATH+++[]
+endif::add-copy-button-to-env-var[]
+ifndef::add-copy-button-to-env-var[]
+Environment variable: `+++ONECX_REDIRECT_CUSTOM_FALLBACK_TEMPLATE_PATH+++`
 endif::add-copy-button-to-env-var[]
 --
 |string
